<resources>
    <string name="app_name">BulletinBoard</string>
    <!--Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <!--Sign Dialog -->
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш Email адресс!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Неудалось зарегестироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="send_verification_email_error">Неудалось отпавить email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения вашего аккаунта, пожалуйста подтвердите ваш аккунт!</string>
    <!--Sign Dialog -->
    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="enter_to_g">У вас уже есть аккаунт с этим Email адресом войдите по нету.</string>
</resources>