<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_cat1">
        <menu>
            <item
                android:title="@string/ad_my_ads"
                android:id="@+id/id_my_ads">
            </item>
            <item
                android:title="@string/ad_car"
                android:id="@+id/id_car">
            </item>
            <item
                android:title="@string/ad_pc"
                android:id="@+id/id_pc">
            </item>
            <item
                android:title="@string/ad_smartphone"
                android:id="@+id/id_smartphone">
            </item>
            <item
                android:title="@string/ad_dm"
                android:id="@+id/id_dm">
            </item>
        </menu>
    </item>

    <item android:title="@string/ad_cat2">
        <menu>
            <item
                android:title="@string/ac_sign_up"
                android:id="@+id/id_sign_up">
            </item>
            <item
                android:title="@string/ac_sign_in"
                android:id="@+id/id_sign_in">
            </item>
            <item
                android:title="@string/ac_sign_out"
                android:id="@+id/id_sign_out">
            </item>
        </menu>
    </item>

</menu>